--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "prettier": "3.5.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
